src/objects/Google_Dashboard_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard_Type__c</fullName>
        <label>Chart Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Pie</fullName>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_By_Field_Label__c</fullName>
        <inlineHelpText>This is the label for the group by field that you want to display in the Google Chart.</inlineHelpText>
        <label>Group By Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_By_Field__c</fullName>
        <label>Group By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_DashBoard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DashBoard Name</label>
        <referenceTo>Parent_DashBoard__c</referenceTo>
        <relationshipLabel>Chart Configurations</relationshipLabel>
        <relationshipName>Chart_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Field1__c</fullName>
        <inlineHelpText>This is the API name of a number field you want to perform the SUM on for the dashboard.</inlineHelpText>
        <label>Summary Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <inlineHelpText>USE WITH CAUTION: This field allows you to filter the generated dashboard queries. Invalid syntax can break your dashboard. You should create the WHERE clause using this format: &amp;apos; WHERE FIELD_X = /&amp;apos;Y&amp;apos;/&amp;apos;.</inlineHelpText>
        <label>Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chart Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chart  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>